Mobile text align fix

--- a/style/media.css
+++ b/style/media.css
@@ -135,6 +135,7 @@
 
     .entry-meta {
         text-align: center;
+        display: block;
     }
 
     .author {
